🔖 Release: v5.2.4 버전 릴리즈 (#516)
Feat: Apache HttpClient 5 구성 추가
Refactor: 같은 맥락의 관측 가능성 키-값의 일관성 보장
Refactor: 댓글 반환 순서 변경
Refactor: Grafana 대시보드 구성을 위한 애플리케이션 프로퍼티 수정
Refactor: 더 이상 의미가 없는 SLOW API 로그 제거
Refactor: 애스팩트에서 Trace ID 관련 로직 개선
Refactor: docker-compose.yml에서 오구성된 환경 변수 제거
Refactor: 로그와 메트릭 데이터 일관성 확보
Refactor: CommentController 검증 로직 통합 메서드 구축 및 재사용
Refactor: 댓글 등록 / 수정 / 삭제 간 검증 로직 추가 및 부하로 인한 문제 개선
Refactor: Redis 키를 단일 클래스에 통합
Dependency: Apache HttpClient 5 의존성 추가
Dependency: Spring Retry 의존성 추가
Docs: Claude Code 문서 수정
Catch: logback-spring.xml 파일 내용 수정
Chore: .gitignore에 /lib/ 경로 추가, MCP 관련 설정 추가
Chore: Micrometer OTLP 트레이싱 설정 정리 및 미사용 OTel 에이전트 설정 제거
Test: 모든 테스트에 대한 아키텍처 일관성 보강